채용 공고 검색 및 상세보기 API 수정